2015.04, version 0.1.2
* posix: new method getPrinterDriverOptions(printerName) to retrieve PPD options
* posix: new method getSelectedPaperSize(printerName) to retrieve the current paper size name
* posix: new parameter `options` added to `printDirect` to set printer options (ex. `fit-to-page`, `media`, etc)

2015.03.03, version 0.1.1
* possibility to build for node-webkit with grunt

2015.02.26, version 0.1.0
* possibility to load native module for platform/arch: node_module_{platform}_{arch}.node

2015.02.24, Version 0.0.5
* added getDefaultPrinterName() method by returning the default printer name
* make printer argument optional in getPrinter() and printDirect. If is missing, will try to print to default printer
* resolve charest of getPrinter() #38
* posix/win32: added more explicit errors
* posix: do not throw error if job status code is not supported

2015.01.30, Version 0.0.4
* win: added RPC installed printers in getPrinters #40
* posix: on some devices not all formats are supported, issue #23
* posix: added link settings on build #28
* corrected README.md
* corrected examples