@@ -4,3 +4,4 @@ build/*
 .c9*
 node_modules/*
 *.node
+*.swp
