@@ -17,16 +17,17 @@ I was involved in a project where I need to print from Node.JS. This is the reas
 * native method wrappers from Windows  and POSIX (which uses [CUPS 1.4/MAC OS X 10.6](http://cups.org/)) APIs;
 * compatible with node v0.8.x, 0.9.x and v0.11.x (with 0.11.9 and 0.11.13);
 * compatible with node-webkit v0.8.x and 0.9.2;
-* ```getPrinters()``` to enumerate all installed printers with current jobs and statuses;
-* ```getPrinter(printerName)``` to get a specific/default printer info with current jobs and statuses;
-* ```getPrinterDriverOptions(printerName)``` ([POSIX](http://en.wikipedia.org/wiki/POSIX) only) to get a specific/default printer driver options such as supported paper size and other info
-* ```getSelectedPaperSize(printerName)``` ([POSIX](http://en.wikipedia.org/wiki/POSIX) only) to get a specific/default printer default paper size from its driver options
-* ```getDefaultPrinterName()``` return the default printer name;
-* ```printDirect(stringData|bufferData, printerName, format, docname, options, success, error)``` to send a job to a specific/default printer, now supports [CUPS options](http://www.cups.org/documentation.php/options.html) passed in the form of a JS object (see `cancelJob.js` example);
-* ```getSupportedPrintFormats()``` to get all possible print formats for printDirect method which depends on OS. ```RAW``` and ```TEXT``` are supported from all OS-es;
-* ```getJob(printerName, jobId)``` to get a specific job info including job status;
-* ```setJob(printerName, jobId, command)``` to send a command to a job (e.g. ```'CANCEL'``` to cancel the job);
-* ```getSupportedJobCommands()``` to get supported job commands for setJob() depends on OS. ```'CANCEL'``` command is supported from all OS-es.
+* `getPrinters()` to enumerate all installed printers with current jobs and statuses;
+* `getPrinter(printerName)` to get a specific/default printer info with current jobs and statuses;
+* `getPrinterDriverOptions(printerName)` ([POSIX](http://en.wikipedia.org/wiki/POSIX) only) to get a specific/default printer driver options such as supported paper size and other info
+* `getSelectedPaperSize(printerName)` ([POSIX](http://en.wikipedia.org/wiki/POSIX) only) to get a specific/default printer default paper size from its driver options
+* `getDefaultPrinterName()` return the default printer name;
+* `printDirect(options)` to send a job to a specific/default printer, now supports [CUPS options](http://www.cups.org/documentation.php/options.html) passed in the form of a JS object (see `cancelJob.js` example);
+* `printFile(options)`  ([POSIX](http://en.wikipedia.org/wiki/POSIX) only) to print a file;
+* `getSupportedPrintFormats()` to get all possible print formats for printDirect method which depends on OS. `RAW` and `TEXT` are supported from all OS-es;
+* `getJob(printerName, jobId)` to get a specific job info including job status;
+* `setJob(printerName, jobId, command)` to send a command to a job (e.g. `'CANCEL'` to cancel the job);
+* `getSupportedJobCommands()` to get supported job commands for setJob() depends on OS. `'CANCEL'` command is supported from all OS-es.
 
 
 ### How to install:
@@ -40,10 +41,10 @@ or [direct from git](https://www.npmjs.org/doc/cli/npm-install.html):
     npm install git+https://github.com/tojocky/node-printer.git
 
 Ubuntu User :
-You need to install libcupsys2-dev package 
-```sudo apt-get install libcupsys2-dev```
-    
-    
+You need to install libcupsys2-dev package
+`sudo apt-get install libcupsys2-dev`
+
+
 ### How to use:
 
 See examples
