@@ -16,33 +16,6 @@
 namespace{
     typedef std::map<std::string, DWORD> StatusMapType;
 
-    /** Memory value class management to avoid memory leak
-    */
-    template<typename Type>
-    struct MemValue
-    {
-        /** Constructor of allocating iSizeKbytes bytes memory;
-        * @param iSizeKbytes size in bytes of required allocating memory
-        */
-        MemValue(const DWORD iSizeKbytes): _value(NULL)
-        {
-            _value = (Type*)malloc(iSizeKbytes);
-        }
-        /** Destructor. The allocated memory will be deallocated
-        */
-        ~MemValue()
-        {
-            if(_value != NULL)
-            {
-                free(_value);
-            }
-        }
-        Type * get() {return _value; }
-        Type * operator ->() { return &_value; }
-        operator bool() const { return (_value != NULL); }
-        Type *_value;
-    };
-
     struct PrinterHandle
     {
         PrinterHandle(LPWSTR iPrinterName)
@@ -430,6 +403,26 @@ namespace{
         }
         return "";
     }
+
+    /** Memory value class management to avoid memory leak
+    */
+    template<typename Type>
+    struct MemValue: public<Type> {
+        /** Constructor of allocating iSizeKbytes bytes memory;
+        * @param iSizeKbytes size in bytes of required allocating memory
+        */
+        MemValue(const DWORD iSizeKbytes) {
+            _value = (Type*)malloc(iSizeKbytes);
+        }
+    protected:
+        virtual void free() {
+            if(_value != NULL)
+            {
+                free(_value);
+                _value = NULL;
+            }
+        }
+    };
 }
 
 MY_NODE_MODULE_CALLBACK(getPrinters)
@@ -708,4 +701,9 @@ MY_NODE_MODULE_CALLBACK(PrintDirect)
         RETURN_EXCEPTION_STR("not sent all bytes");
     }
     MY_NODE_MODULE_RETURN_VALUE(V8_VALUE_NEW(Number, dwJob));
+}
+
+MY_NODE_MODULE_CALLBACK(PrintFile)
+{
+    RETURN_EXCEPTION_STR("Not yet implemented on Windows");
 }
